dg-charts/v1.16.0/templates/allow-elasticsearch-a-ingress-from-dgsuggest.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-elasticsearch-a-ingress-from-dgsuggest
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: dgsuggest
  podSelector:
    matchLabels:
      app: elasticsearch-a
