dg-charts/v1.16.0/templates/allow-elasticsearch-a-ingress-from-hubservice.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-elasticsearch-a-ingress-from-hubservice
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: hubservice
  podSelector:
    matchLabels:
      app: elasticsearch-a
